--- a/app/index.html
+++ b/app/index.html
@@ -14,49 +14,41 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="burnRedoApp">
+  <body ng-app="burnRedoApp" ng-controller="AppCtrl">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
+    <!-- Aside and Navigation -->
+    <div class="aside" ng-class="{'aside-reveal': aside}">
+      <!-- Close Button for the Aside -->
+      <span class="glyphicon glyphicon-remove" ng-click="toggleAside()"></span>
 
-            <a class="navbar-brand" href="#/">burnRedo</a>
-          </div>
+      <!-- Navigation -->
+    </div>
+    <!-- End of Aside -->
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
-          </div>
+    <div class="main" ng-class="{'aside-reveal': aside}">
+      <div class="header">
+        <div class="header-logo" ng-click="toggleAside()">
+          <img src="images/masthead-1.png" alt="Korea Burn Symbol"/>
+          <span class="glyphicon glyphicon-menu-hamburger"></span>
         </div>
       </div>
-    </div>
 
-    <div class="container">
-    <div ui-view=""></div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+      <div class="content container">
+        <div ui-view=""></div>
       </div>
-    </div>
 
+      <div class="footer">
+        <div class="container">
+          <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        </div>
+      </div>
+
+    </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
