--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
         <li>
           <div ng-click="toggleAside()" ui-sref="event.koreaburn2015" class="title">Event</div>
           <div ng-click="toggleSubmenu('event')" class="btn-submenu">
-            <span class="glyphicon glyphicon-chevron-down" ng-class="{open: openSub !== 'event'}"></span>
+            <span class="glyphicon glyphicon-chevron-down" ng-class="{'open-90': openSub !== 'event'}"></span>
           </div>
           <ul collapse="openSub !== 'event'">
             <li>Korea Burn 2015</li>
@@ -44,7 +44,7 @@
         <li>
           <div ng-click="toggleAside()" ui-sref="culture" class="title">Culture</div>
           <div ng-click="toggleSubmenu('culture')" class="btn-submenu">
-            <span class="glyphicon glyphicon-chevron-down" ng-class="{open: openSub !== 'culture'}"></span>
+            <span class="glyphicon glyphicon-chevron-down" ng-class="{'open-90': openSub !== 'culture'}"></span>
           </div>
           <ul collapse="openSub !== 'culture'">
             <li>10 Principles</li>
@@ -55,7 +55,7 @@
         <li>
           <div ng-click="toggleAside()" ui-sref="info" class="title">Info</div>
           <div ng-click="toggleSubmenu('info')" class="btn-submenu">
-            <span class="glyphicon glyphicon-chevron-down" ng-class="{open: openSub !== 'info'}"></span>
+            <span class="glyphicon glyphicon-chevron-down" ng-class="{'open-90': openSub !== 'info'}"></span>
           </div>
           <ul collapse="openSub !== 'info'">
             <li>Tickets</li>
