starting from scratch on main page pictoral nav

--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
             <h5>Menu <span class="glyphicon glyphicon-menu-hamburger"></span></h5>
           </div>
         </div>
-        <div class="header-brand"><h1>Korea Burn</h1></div>
+        <div class="header-brand"><a ui-sref="main"><h1>Korea Burn</h1></a></div>
         <div class="header-quote hidden-xs"><h3 >Some inspiring quote here</h3></div>
       </div>
 
