worked on some shit

--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@
         <div class="header-quote hidden-xs"><h3 >Some inspiring quote here</h3></div>
       </div>
 
-      <div class="content container">
+      <div class="content">
         <div ui-view=""></div>
       </div>
 
