begin adding bootstrap col to layout

--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,10 @@
           </ul>
         </li>
       </ul>
+
+      <div class="aside-img">
+        <img class="img-responsive" src="images/logo-4.png" alt="korea burn logo"/>
+      </div>
     </div>
     <!-- End of Aside -->
 
