--- a/app/index.html
+++ b/app/index.html
@@ -29,16 +29,16 @@
       <!-- Navigation -->
       <ul class="aside-vert-nav">
         <li>
-          <div ng-click="toggleAside()" ui-sref="event.koreaburn2015" class="title">Event</div>
+          <div ng-click="toggleAside()" ui-sref="event" class="title">Event</div>
           <div ng-click="toggleSubmenu('event')" class="btn-submenu">
             <span class="glyphicon glyphicon-chevron-down" ng-class="{'open-90': openSub !== 'event'}"></span>
           </div>
           <ul collapse="openSub !== 'event'">
-            <li>Korea Burn 2015</li>
-            <li>Schedule</li>
-            <li>Art and Performance</li>
-            <li>Theme Camps</li>
-            <li>Preparation</li>
+            <li ui-sref="event.koreaburn2015" ng-click="toggleAside()">Korea Burn 2015</li>
+            <li><strike>Schedule</strike></li>
+            <li><strike>Art and Performance</strike></li>
+            <li><strike>Theme Camps</strike></li>
+            <li><strike>Preparation</strike></li>
           </ul>
         </li>
         <li>
@@ -47,9 +47,9 @@
             <span class="glyphicon glyphicon-chevron-down" ng-class="{'open-90': openSub !== 'culture'}"></span>
           </div>
           <ul collapse="openSub !== 'culture'">
-            <li>10 Principles</li>
-            <li>Leave No Trace</li>
-            <li>Participation</li>
+            <li><strike>10 Principles</strike></li>
+            <li><strike>Leave No Trace</strike></li>
+            <li><strike>Participation</strike></li>
           </ul>
         </li>
         <li>
@@ -58,11 +58,11 @@
             <span class="glyphicon glyphicon-chevron-down" ng-class="{'open-90': openSub !== 'info'}"></span>
           </div>
           <ul collapse="openSub !== 'info'">
-            <li>Tickets</li>
-            <li>Schedule</li>
-            <li>Getting There</li>
-            <li>Rules and Regs</li>
-            <li>Accommodations</li>
+            <li><strike>Tickets</strike></li>
+            <li><strike>Schedule</strike></li>
+            <li><strike>Getting There</strike></li>
+            <li><strike>Rules and Regs</strike></li>
+            <li><strike>Accommodations</strike></li>
           </ul>
         </li>
       </ul>
